# pagoda3

./: .gitignore  LICENSE  README.md  pagoda2-design-brief.md  plan1.0.md  plan1.md  stage-test-findings.md  stage-test.md
.claude/: CLAUDE.md  launch.json
.github/workflows/: release.yml
data-pipeline/: 01_process_GSM5746259.py  02_process_seurat_integrated.R  make_dev_store.py
docs/: architecture.md  deep-view-control.md  deployment.md  mockup.html  widget-format.md
examples/: 01_process_GSM5746259.py  02_process_seurat_integrated.R  03_process_seurat_6sample.R  make_dev_store.py
misc/: annotation_panel.md  enabling_custom_widgets.md  note_for_lstar.md  note_from_lstar.md
prep/: basis.test.ts  basis.ts  prep.ts  recompute_od.mjs  reorder.mjs
py/: README.md  pyproject.toml
py/src/pagoda3/: __init__.py  bundle.py  cli.py  launch.py  publish.py  serve.py  viewer.py
py/tests/: test_write_viewer.py
r/: DESCRIPTION  LICENSE  NAMESPACE
r/R/: serve.R  view.R  write_viewer.R
r/tests/: testthat.R
r/tests/testthat/: test-write_viewer.R
server/: build-bundle.sh  build_genesets.mjs  deploy.sh  proxy.mjs  staticzarr.mjs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  widget-dev.html
web/public/: .htaccess  sab-test.html
web/public/genesets/: index.json
web/src/: build.test.ts  main.ts
web/src/agent/: agent.ts  capabilities.test.ts  capabilities.ts  cellset.test.ts  cellset.ts  codeapi.test.ts  codeapi.ts  credentials.test.ts  credentials.ts  live.ts  loopguard.test.ts  loopguard.ts  providers.test.ts  providers.ts  (+4 more)
(+95 files in other folders)
