[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pagoda3"
version = "0.0.1"
description = "pagoda3 — an agent-driven, browser-native viewer for single-cell data (via the L* / lstar store format)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Peter Kharchenko and the pagoda3 authors" }]
dependencies = ["numpy", "scipy", "lstar-sc>=0.1.4"]

[project.scripts]
pagoda3 = "pagoda3.cli:main"

[project.optional-dependencies]
anndata = ["anndata"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

# the vendored viewer bundle (server/build-bundle.sh writes src/pagoda3/_viewer before packaging;
# it's gitignored, so this is a no-op in a bare checkout and ships the bundle in a built wheel)
[tool.setuptools.package-data]
pagoda3 = ["_viewer/**/*"]
